--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">買い物メモ</string>
+
+    <string name="home_add_dialog_title">追加する</string>
+    <string name="home_add_dialog_name">名前</string>
+    <string name="home_add_dialog_count">数量</string>
+    <string name="home_add_dialog_memo">メモ</string>
 </resources>
