--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="home_add_dialog_count">数量</string>
     <string name="home_add_dialog_memo">メモ</string>
     <string name="home_add_dialog_button">追加</string>
+
+    <string name="home_memo_dialog_button">確認</string>
 </resources>
