文字列リソース追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">買い物メモ</string>
 
     <string name="confirm">OK</string>
+    <string name="cancel">キャンセル</string>
 
     <string name="error_dialog_title">エラー</string>
     <string name="error_network_message">通信時にエラーが発生しました</string>
@@ -10,6 +11,9 @@
     <string name="home_add_dialog_count">数量</string>
     <string name="home_add_dialog_memo">メモ</string>
     <string name="home_add_dialog_button">追加</string>
+
+    <string name="home_operation_dialog_archive">アーカイブ</string>
+    <string name="home_operation_dialog_delete">削除</string>
 
     <string name="home_memo_dialog_button">確認</string>
 </resources>
