--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="home_add_dialog_memo">メモ</string>
     <string name="home_add_dialog_button">追加</string>
 
+    <string name="home_editing_dialog_button">編集</string>
+
+    <string name="home_operation_dialog_edit">編集</string>
     <string name="home_operation_dialog_archive">アーカイブ</string>
     <string name="home_operation_dialog_delete">削除</string>
 
