--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,13 @@
     <string name="error_dialog_title">エラー</string>
     <string name="error_network_message">通信時にエラーが発生しました</string>
 
+    <string name="home_add_screen_name">アイテムを追加</string>
     <string name="home_add_dialog_name">名前</string>
     <string name="home_add_dialog_count">数量</string>
     <string name="home_add_dialog_memo">メモ</string>
     <string name="home_add_dialog_button">追加</string>
 
+    <string name="home_edit_screen_name">アイテムを編集</string>
     <string name="home_editing_dialog_button">編集</string>
 
     <string name="home_operation_dialog_edit">編集</string>
