BottomNavigation で買い物メモとタグの表示を切り替え

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">買い物メモ</string>
 
+    <string name="bottom_navigation_shopping_items">買い物リスト</string>
+    <string name="bottom_navigation_tags">タグ</string>
+
     <string name="confirm">OK</string>
     <string name="cancel">キャンセル</string>
 
