--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,11 @@
     <string name="error_dialog_title">エラー</string>
     <string name="error_network_message">通信時にエラーが発生しました</string>
 
+    <string name="home_list_title">@string/app_name</string>
+    <string name="home_list_tab_main">Main</string>
+    <string name="home_list_tab_archived">Archived</string>
+    <string name="home_list_tab_deleted">Deleted</string>
+
     <string name="home_add_screen_name">アイテムを追加</string>
     <string name="home_add_dialog_name">名前</string>
     <string name="home_add_dialog_tag">タグ</string>
