--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,13 +16,14 @@
     <string name="home_list_tab_deleted">Deleted</string>
 
     <string name="home_add_title">アイテムを追加</string>
-    <string name="home_add_dialog_tag">タグ</string>
-    <string name="home_add_dialog_count">数量</string>
-    <string name="home_add_dialog_memo">メモ</string>
-    <string name="home_add_dialog_button">追加</string>
+    <string name="home_add_button">追加</string>
 
-    <string name="home_edit_screen_name">アイテムを編集</string>
-    <string name="home_editing_dialog_button">編集</string>
+    <string name="home_edit_title">アイテムを編集</string>
+    <string name="home_edit_button">編集</string>
+
+    <string name="home_edit_tag_label">タグ</string>
+    <string name="home_edit_count_label">数量</string>
+    <string name="home_edit_memo_label">メモ</string>
 
     <string name="home_operation_dialog_edit">編集</string>
     <string name="home_operation_dialog_archive">アーカイブ</string>
