--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="home_list_tab_archived">Archived</string>
     <string name="home_list_tab_deleted">Deleted</string>
     <string name="home_list_archive_button">完了済をアーカイブ</string>
+    <string name="home_list_empty">アイテムが存在しません</string>
 
     <string name="home_add_title">アイテムを追加</string>
     <string name="home_add_button">追加</string>
