--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="tag_add_type_label">タイプ</string>
     <string name="tag_add_name_label">名前</string>
     <string name="tag_add_button">追加</string>
+
+    <string name="tag_edit_title">タグを編集</string>
+    <string name="tag_edit_button">編集</string>
 </resources>
