--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="home_operation_restore">戻す</string>
 
     <string name="tag_list_title">タグ</string>
+    <string name="tag_list_operation_edit">編集</string>
     <string name="tag_list_empty">タグが存在しません</string>
 
     <string name="tag_add_title">タグを追加</string>
